# SCLOrkTools

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  PD_Define_Presets.scd  README.md  SCLOrkChat.quark  SCLOrkClock.quark  SCLOrkCore.quark  SCLOrkNet.quark  SCLOrkPD.quark  SCLOrkTools.quark  SCLOrkUI.quark  sclork-server  sclork_chat_test.scd  server_bot.scd
HelpSource/Classes/: SCLOrkChat.schelp  SCLOrkChatClient.schelp  SCLOrkChatMessage.schelp  SCLOrkChatMessageView.schelp  SCLOrkChatServer.schelp  SCLOrkClock.schelp  SCLOrkConfab.schelp  SCLOrkJack.schelp  SCLOrkQuNeo.schelp  SCLOrkSamples.schelp  SCLOrkTimeClient.schelp  SCLOrkTimeServer.schelp  SCLOrkWatch.schelp  SCLOrkWiimote.schelp  SCLOrkWire.schelp
HelpSource/Guides/: SCLOrkChat-User-Guide.schelp  SCLOrkClock-User-Guide.schelp  SCLOrkCore-User-Guide.schelp  SCLOrkNet-User-Guide.schelp  SCLOrkTools-User-Guide.schelp  SCLOrkUI-User-Guide.schelp
HelpSource/Reference/: SCLOrkAsset-Design-Document.schelp  SCLOrkAsset-Sharing-Design-Document.schelp  SCLOrkChat-OSC-Command-Reference.schelp  SCLOrkChat-Release-Notes.schelp  SCLOrkClock-Design-Document.schelp  SCLOrkClock-Release-Notes.schelp  SCLOrkClock-Time-Synchronization-Design.schelp  SCLOrkCore-Release-Notes.schelp  SCLOrkNet-Release-Notes.schelp  SCLOrkPD-Release-Notes.schelp  SCLOrkTools-Release-Notes.schelp  SCLOrkUI-Release-Notes.schelp  SCLOrkWire-Design-Document.schelp
classes/: SCLOrkAsset.sc  SCLOrkCDT.sc  SCLOrkChat.sc  SCLOrkChatClient.sc  SCLOrkChatMessage.sc  SCLOrkChatMessageView.sc  SCLOrkChatServer.sc  SCLOrkClock.sc  SCLOrkClockMonitor.sc  SCLOrkClockProxyFollower.sc  SCLOrkClockProxyLeader.sc  SCLOrkClockServer.sc  SCLOrkClockState.sc  SCLOrkConfab.sc  SCLOrkEmoji.sc  SCLOrkJack.sc  SCLOrkPD.sc  SCLOrkPDParameterView.sc  SCLOrkPDParser.sc  SCLOrkPDPreset.sc  SCLOrkPDToken.sc  SCLOrkPDVoice.sc  SCLOrkSocket.sc  SCLOrkTimeClient.sc  SCLOrkTimeServer.sc  SCLOrkUser.sc  SCLOrkUsers.sc  SCLOrkWatch.sc  SCLOrkWiimote.sc  SCLOrkWiimoteUI.sc  SCLOrkWire.sc  nanoKONTROL2.sc
scide_scqt/: SCLOrkCDTUI.sc  SCLOrkChat.sc  SCLOrkChatMessageView.sc  SCLOrkClockView.sc  SCLOrkEmojiMenu.sc  SCLOrkEmojiPicker.sc  SCLOrkEmojiPickerView.sc  SCLOrkLoginWindow.sc  SCLOrkOblique.sc  SCLOrkPDParameterView.sc  SCLOrkQuNeo.sc  SCLOrkSamples.sc  SCLOrkSoundFile.sc  SCLOrkWatch.sc  SCLOrkWiimoteUI.sc  SCLOrkWindow.sc  extStartupFileGUI.sc
scripts/: build_emoji_trie.scd  emoji_picker_test.scd  init_empty_confab.scd  sclork-server  sclork_chat_test.scd  server_bot.scd  test_sclork_clock.scd
src/: CMakeLists.txt  Doxyfile
src/common/: CMakeLists.txt  Version.cpp  Version.hpp  Version_test.cpp
src/common/include/common/: Version.hpp
src/confab/: Asset.cpp  Asset.hpp  AssetData.cpp  AssetData.hpp  AssetDatabase.cpp  AssetDatabase.hpp  AssetManager.cpp  AssetManager.hpp  Asset_test.cpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  ChatCommands.cpp.in  ChatCommands.hpp  ChatServer.cpp  ChatServer.hpp  ConfabCommon.cpp  ConfabCommon.hpp  ConfabVersion.hpp.in  Config.cpp  Config.hpp  Constants.hpp.in  Database.cpp  Database.hpp  Database_test.cpp  HttpClient.cpp  HttpClient.hpp  HttpEndpoint.cpp  HttpEndpoint.hpp  OscHandler.cpp  OscHandler.hpp  Record.hpp  SizedPointer.hpp  State.cpp  State.hpp  confab-server.cpp  confab.cpp  test_confab.cpp
src/confab/schemas/: Asset.fbs  Config.fbs  FlatAsset.fbs  FlatAssetData.fbs  FlatConfig.fbs  FlatList.fbs  FlatState.fbs
src/doc/: Doxyfile.in  index.md
src/doc/reference/: Confab-Design-Document.md
tests/: TestSCLOrkClockState.sc  TestSCLOrkWire.sc
